test/expected/regression-http-parser.txt
/scripts/regression-http-parser.js:25
      throw new Error('trace');
      ^

Error: trace
    at Socket.res.socket._read (/scripts/regression-http-parser.js:r:c)
    at Socket.Readable.read (_stream_readable.js:r:c)
    at addChunk (_stream_readable.js:r:c)
    at readableAddChunk (_stream_readable.js:r:c)
    at Socket.Readable.push (_stream_readable.js:r:c)
    at TCP.onread (net.js:r:c)
    at TCP.emitInitNative (internal/async_hooks.js:r:c)
    at Socket.connect (net.js:r:c)
    at Agent.connect [as createConnection] (net.js:r:c)
    at Agent.createSocket (_http_agent.js:r:c)
    at Agent.addRequest (_http_agent.js:r:c)
    at new ClientRequest (_http_client.js:r:c)
    at request (http.js:r:c)
    at Object.get (http.js:r:c)
    at Server.<anonymous> (/scripts/regression-http-parser.js:r:c)
    at Object.onceWrapper (events.js:r:c)
    at Server.emit (events.js:r:c)
    at emitListeningNT (net.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at internalNextTick (internal/process/next_tick.js:r:c)
    at Server.setupListenHandle [as _listen2] (net.js:r:c)
    at TCP.emitInitNative (internal/async_hooks.js:r:c)
    at createServerHandle (net.js:r:c)
    at Server.setupListenHandle [as _listen2] (net.js:r:c)
    at listenInCluster (net.js:r:c)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:r:c)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:r:c)
    at GetAddrInfoReqWrap.emitInitNative (internal/async_hooks.js:r:c)
    at Object.lookup (dns.js:r:c)
    at lookupAndListen (net.js:r:c)
    at Server.listen (net.js:r:c)
    at Object.<anonymous> (/scripts/regression-http-parser.js:r:c)
    at Module._compile (module.js:r:c)
    at Object.Module._extensions..js (module.js:r:c)
    at Module.load (module.js:r:c)
    at tryModuleLoad (module.js:r:c)
    at Function.Module._load (module.js:r:c)
    at Function.Module.runMain (module.js:r:c)
    at startup (bootstrap_node.js:r:c)
    at bootstrap_node.js:r:c
